《深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）》-读书笔记(1), 3.9 本章小节。 最近各种事情较多，学习时间少了